// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase should render anchor element correctly by href and externalLink, href target and rel exist 1`] = `
<div>
  <a
    class="box mm-text mm-button-base mm-button-base--size-md mm-text--body-md box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-text-default box--background-color-background-alternative box--rounded-pill"
    data-testid="button-base"
    href="https://www.test.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Button Base
  </a>
</div>
`;

exports[`ButtonBase should render button element correctly and match snapshot 1`] = `
<div>
  <button
    class="box mm-text mm-button-base mm-button-base--size-md mm-text--body-md box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-text-default box--background-color-background-alternative box--rounded-pill"
    data-testid="button-base"
  >
    Button base
  </button>
</div>
`;
